--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "dependencies": {
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
-    "pg-client": "0.0.5",
-    "pg": "^7.4.1"
+    "pg": "^7.4.1",
+    "pg-client": "0.0.5"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0"
   }
 }
